# email_newsletter

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.github/workflows/: general.yaml
configuration/: base.yaml  production.yaml
migrations/: 20230912032905_make_status_not_null_in_subscriptions.sql  20230913024215_create_subscription_tokens_table.sql  20231002044454_seed_users.sql  20231006044254_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
