[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["sangkhuudev <sangkhuudev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name ="email_newsletter"

[dependencies]
actix-web ="4.4.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.188", features = ["derive"]}
serde-aux = "4.2.0"
config = "0.11"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.15"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.6"
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
reqwest = "0.11.20"
once_cell = "1.18.0"
[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "offline"
]