[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["sangkhuudev <sangkhuudev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name ="email_newsletter"

[dependencies]
actix-web ="4.4.0"
actix-web-lab = "0.19.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
serde-aux = "4.2.0"
config = "0.13.3"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = "0.4.15"
# We need the `std_rng` to get access to the PRNG we want
rand = { version = "0.8.5", features=["std_rng"] }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.6"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.10.1"
validator = "0.16.1"
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls", "cookies"]}
thiserror = "1.0.48"
anyhow = "1.0.75"
base64 = "0.21.4"

urlencoding = "2.1.3"
htmlescape = "0.3.1"
argon2 = { version = "0.5.2", features = ["std"] }
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
[dev-dependencies]
once_cell = "1.18.0"
claim = "0.5.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
wiremock = "0.5.19"
serde_json = "1.0.106"
linkify = "0.8.1"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "offline"
]

[dependencies.actix-session]
git = "https://github.com/actix/actix-extras"
branch = "master"
features = ["redis-rs-tls-session"]